vtk-wasm-app/build/build_log_utf8.txt
[1/2] D:\wasm\emsdk\upstream\emscripten\em++.bat -c D:/wasm/vtk-wasm-app/main.cxx -DFMT_SHARED -DGLAD_API_CALL_EXPORT -DSCN_DISABLE_FAST_FLOAT=0 -DSCN_DISABLE_REGEX=0 -DSCN_REGEX_BACKEND=0 -Dkiss_fft_scalar=double -isystem D:/wasm/VTK-src/Common/Core -isystem D:/wasm/vtk-src/build-wasm/Common/Core -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/fast_float -isystem D:/wasm/VTK-src/ThirdParty/fast_float -isystem D:/wasm/VTK-src/ThirdParty/fmt/vtkfmt -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/fmt/vtkfmt -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/fmt -isystem D:/wasm/VTK-src/ThirdParty/fmt -isystem D:/wasm/vtk-src/build-wasm/Utilities/KWIML -isystem D:/wasm/VTK-src/Utilities/KWIML -isystem D:/wasm/VTK-src/ThirdParty/nlohmannjson/vtknlohmannjson -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/nlohmannjson/vtknlohmannjson -isystem D:/wasm/VTK-src/ThirdParty/nlohmannjson/vtknlohmannjson/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/nlohmannjson -isystem D:/wasm/VTK-src/ThirdParty/nlohmannjson -isystem D:/wasm/VTK-src/ThirdParty/scn/vtkscn -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/scn/vtkscn -isystem D:/wasm/VTK-src/ThirdParty/scn/vtkscn/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/scn/vtkscn/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/scn -isystem D:/wasm/VTK-src/ThirdParty/scn -isystem D:/wasm/VTK-src/ThirdParty/token/vtktoken/token -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/token/vtktoken/token -isystem D:/wasm/VTK-src/ThirdParty/token/vtktoken -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/token/vtktoken -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/token -isystem D:/wasm/VTK-src/ThirdParty/token -isystem D:/wasm/vtk-src/build-wasm/Utilities/KWSys -isystem D:/wasm/VTK-src/Utilities/KWSys -isystem D:/wasm/VTK-src/Common/Color -isystem D:/wasm/vtk-src/build-wasm/Common/Color -isystem D:/wasm/VTK-src/Common/DataModel -isystem D:/wasm/vtk-src/build-wasm/Common/DataModel -isystem D:/wasm/VTK-src/Common/Math -isystem D:/wasm/vtk-src/build-wasm/Common/Math -isystem D:/wasm/VTK-src/ThirdParty/kissfft/vtkkissfft -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/kissfft/vtkkissfft -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/kissfft -isystem D:/wasm/VTK-src/ThirdParty/kissfft -isystem D:/wasm/VTK-src/Common/Transforms -isystem D:/wasm/vtk-src/build-wasm/Common/Transforms -isystem D:/wasm/VTK-src/Filters/Core -isystem D:/wasm/vtk-src/build-wasm/Filters/Core -isystem D:/wasm/VTK-src/Common/ExecutionModel -isystem D:/wasm/vtk-src/build-wasm/Common/ExecutionModel -isystem D:/wasm/VTK-src/Common/Misc -isystem D:/wasm/vtk-src/build-wasm/Common/Misc -isystem D:/wasm/VTK-src/IO/XML -isystem D:/wasm/vtk-src/build-wasm/IO/XML -isystem D:/wasm/VTK-src/IO/XMLParser -isystem D:/wasm/vtk-src/build-wasm/IO/XMLParser -isystem D:/wasm/VTK-src/Rendering/Core -isystem D:/wasm/vtk-src/build-wasm/Rendering/Core -isystem D:/wasm/VTK-src/Rendering/OpenGL2 -isystem D:/wasm/vtk-src/build-wasm/Rendering/OpenGL2 -isystem D:/wasm/VTK-src/Filters/General -isystem D:/wasm/vtk-src/build-wasm/Filters/General -isystem D:/wasm/VTK-src/IO/Core -isystem D:/wasm/vtk-src/build-wasm/IO/Core -isystem D:/wasm/VTK-src/IO/Image -isystem D:/wasm/vtk-src/build-wasm/IO/Image -isystem D:/wasm/VTK-src/Imaging/Core -isystem D:/wasm/vtk-src/build-wasm/Imaging/Core -isystem D:/wasm/VTK-src/Rendering/HyperTreeGrid -isystem D:/wasm/vtk-src/build-wasm/Rendering/HyperTreeGrid -isystem D:/wasm/VTK-src/Rendering/UI -isystem D:/wasm/vtk-src/build-wasm/Rendering/UI -isystem D:/wasm/VTK-src/Utilities/X11 -isystem D:/wasm/vtk-src/build-wasm/Utilities/X11 -isystem D:/wasm/VTK-src/ThirdParty/glad/vtkglad -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/glad/vtkglad -isystem D:/wasm/VTK-src/ThirdParty/glad/vtkglad/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/glad -isystem D:/wasm/VTK-src/ThirdParty/glad -isystem D:/wasm/VTK-src/Interaction/Style -isystem D:/wasm/vtk-src/build-wasm/Interaction/Style -std=gnu++17 -MD -MT CMakeFiles/vtkWasmApp.dir/main.cxx.o -MF CMakeFiles\vtkWasmApp.dir\main.cxx.o.d -o CMakeFiles/vtkWasmApp.dir/main.cxx.o -fPIC
FAILED: [code=1] CMakeFiles/vtkWasmApp.dir/main.cxx.o 
D:\wasm\emsdk\upstream\emscripten\em++.bat -c D:/wasm/vtk-wasm-app/main.cxx -DFMT_SHARED -DGLAD_API_CALL_EXPORT -DSCN_DISABLE_FAST_FLOAT=0 -DSCN_DISABLE_REGEX=0 -DSCN_REGEX_BACKEND=0 -Dkiss_fft_scalar=double -isystem D:/wasm/VTK-src/Common/Core -isystem D:/wasm/vtk-src/build-wasm/Common/Core -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/fast_float -isystem D:/wasm/VTK-src/ThirdParty/fast_float -isystem D:/wasm/VTK-src/ThirdParty/fmt/vtkfmt -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/fmt/vtkfmt -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/fmt -isystem D:/wasm/VTK-src/ThirdParty/fmt -isystem D:/wasm/vtk-src/build-wasm/Utilities/KWIML -isystem D:/wasm/VTK-src/Utilities/KWIML -isystem D:/wasm/VTK-src/ThirdParty/nlohmannjson/vtknlohmannjson -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/nlohmannjson/vtknlohmannjson -isystem D:/wasm/VTK-src/ThirdParty/nlohmannjson/vtknlohmannjson/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/nlohmannjson -isystem D:/wasm/VTK-src/ThirdParty/nlohmannjson -isystem D:/wasm/VTK-src/ThirdParty/scn/vtkscn -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/scn/vtkscn -isystem D:/wasm/VTK-src/ThirdParty/scn/vtkscn/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/scn/vtkscn/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/scn -isystem D:/wasm/VTK-src/ThirdParty/scn -isystem D:/wasm/VTK-src/ThirdParty/token/vtktoken/token -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/token/vtktoken/token -isystem D:/wasm/VTK-src/ThirdParty/token/vtktoken -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/token/vtktoken -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/token -isystem D:/wasm/VTK-src/ThirdParty/token -isystem D:/wasm/vtk-src/build-wasm/Utilities/KWSys -isystem D:/wasm/VTK-src/Utilities/KWSys -isystem D:/wasm/VTK-src/Common/Color -isystem D:/wasm/vtk-src/build-wasm/Common/Color -isystem D:/wasm/VTK-src/Common/DataModel -isystem D:/wasm/vtk-src/build-wasm/Common/DataModel -isystem D:/wasm/VTK-src/Common/Math -isystem D:/wasm/vtk-src/build-wasm/Common/Math -isystem D:/wasm/VTK-src/ThirdParty/kissfft/vtkkissfft -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/kissfft/vtkkissfft -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/kissfft -isystem D:/wasm/VTK-src/ThirdParty/kissfft -isystem D:/wasm/VTK-src/Common/Transforms -isystem D:/wasm/vtk-src/build-wasm/Common/Transforms -isystem D:/wasm/VTK-src/Filters/Core -isystem D:/wasm/vtk-src/build-wasm/Filters/Core -isystem D:/wasm/VTK-src/Common/ExecutionModel -isystem D:/wasm/vtk-src/build-wasm/Common/ExecutionModel -isystem D:/wasm/VTK-src/Common/Misc -isystem D:/wasm/vtk-src/build-wasm/Common/Misc -isystem D:/wasm/VTK-src/IO/XML -isystem D:/wasm/vtk-src/build-wasm/IO/XML -isystem D:/wasm/VTK-src/IO/XMLParser -isystem D:/wasm/vtk-src/build-wasm/IO/XMLParser -isystem D:/wasm/VTK-src/Rendering/Core -isystem D:/wasm/vtk-src/build-wasm/Rendering/Core -isystem D:/wasm/VTK-src/Rendering/OpenGL2 -isystem D:/wasm/vtk-src/build-wasm/Rendering/OpenGL2 -isystem D:/wasm/VTK-src/Filters/General -isystem D:/wasm/vtk-src/build-wasm/Filters/General -isystem D:/wasm/VTK-src/IO/Core -isystem D:/wasm/vtk-src/build-wasm/IO/Core -isystem D:/wasm/VTK-src/IO/Image -isystem D:/wasm/vtk-src/build-wasm/IO/Image -isystem D:/wasm/VTK-src/Imaging/Core -isystem D:/wasm/vtk-src/build-wasm/Imaging/Core -isystem D:/wasm/VTK-src/Rendering/HyperTreeGrid -isystem D:/wasm/vtk-src/build-wasm/Rendering/HyperTreeGrid -isystem D:/wasm/VTK-src/Rendering/UI -isystem D:/wasm/vtk-src/build-wasm/Rendering/UI -isystem D:/wasm/VTK-src/Utilities/X11 -isystem D:/wasm/vtk-src/build-wasm/Utilities/X11 -isystem D:/wasm/VTK-src/ThirdParty/glad/vtkglad -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/glad/vtkglad -isystem D:/wasm/VTK-src/ThirdParty/glad/vtkglad/include -isystem D:/wasm/vtk-src/build-wasm/ThirdParty/glad -isystem D:/wasm/VTK-src/ThirdParty/glad -isystem D:/wasm/VTK-src/Interaction/Style -isystem D:/wasm/vtk-src/build-wasm/Interaction/Style -std=gnu++17 -MD -MT CMakeFiles/vtkWasmApp.dir/main.cxx.o -MF CMakeFiles\vtkWasmApp.dir\main.cxx.o.d -o CMakeFiles/vtkWasmApp.dir/main.cxx.o -fPIC
D:/wasm/vtk-wasm-app/main.cxx:41:35: error: member access into incomplete type 'vtkRendererCollection'
   41 |   if (renderWindow->GetRenderers()->GetNumberOfItems() == 0)
      |                                   ^
D:/wasm/VTK-src/Rendering/Core\vtkRenderWindow.h:47:7: note: forward declaration of 'vtkRendererCollection'
   47 | class vtkRendererCollection;
      |       ^
1 error generated.
ninja: build stopped: subcommand failed.
